# ha-ops-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCS.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  build.yaml  config.example.local.yaml  config.yaml  pyproject.toml  repository.yaml  run.sh
.github/workflows/: release.yml
docs/: BACKLOG.md  CONNECTIVITY_TROUBLESHOOTING.md  DESIGN_SYSTEM_BRIEF.md  HA_API_CAPABILITIES.md  HA_QUIRKS.md  INSTALL.md  KNOWN_GOOD_ENV.md  SECURITY_REVIEW.md  TOOLS.md  UI_PERF_BASELINE.md
docs/design_system/: CHANGELOG.md  IMPLEMENTATION.md  Logo Exploration.html  README.md  RELEASE_BRIEF_v1.0.md  SKILL.md  colors_and_type.css
docs/design_system/preview/: brand-area-icons.html  brand-areas.html  brand-logo.html  colors-accent.html  colors-diff-syntax.html  colors-neutral.html  colors-opclass.html  colors-state.html  colors-surfaces.html  components-buttons.html  components-chips.html  components-header.html  components-stat-cards.html  components-states.html  components-timeline-row.html  spacing-elevation.html  spacing-radii.html  spacing-scale.html  type-families.html  type-roles.html  type-scale.html
docs/superpowers/plans/: 2026-06-13-shell-output-persistence.md
docs/superpowers/specs/: 2026-06-13-shell-output-persistence-design.md
scripts/: dev-deploy.sh  smoke.sh  sync-version.sh
src/ha_ops_mcp/: __init__.py  __main__.py  _runner.py  config.py  lovelace_validate.py  server.py
tests/: conftest.py  test_addon_tools.py  test_auth_provider.py  test_auth_store.py  test_auth_tools.py  test_backup_prune_tool.py  test_backup_retention.py  test_backup_revert_drift.py  test_batch_tools.py  test_captures.py  test_classification.py  test_config_extra_tools.py  test_config_loader.py  test_config_tools.py  test_dashboard_resources.py  test_dashboard_tools.py  test_dashboard_validate.py  test_db_tools.py  test_db_write_tools.py  test_debugger_tools.py  test_device_tools.py  test_entity_find.py  test_entity_mutations.py  test_entity_tools.py  test_ergonomics_tools.py  test_ha_yaml.py  test_helper_tools.py  test_integration.py  test_jinja_walk.py  test_mcp_result_shape.py  test_new_ops_tools.py  test_refindex.py  test_refs_tools.py  test_registry_tools.py  test_rest_client.py  test_rollback_tool.py  test_safety.py  test_service_tools.py  test_shell_output_store.py  test_shell_tools.py  (+6 more)
translations/: en.yaml
(+83 files in other folders)
